# invisible_pm

./: .gitignore  CLAUDE.md  README.md  team-config.json
.claude/: settings.json
.claude/hooks/: branch-guard.mjs  checkpoint-freshness-guard.mjs  commit-spec-guard.mjs  design-gate.mjs  e2e-gate.mjs  e2e-report.mjs  healing-budget-guard.mjs  heartbeat-sender.mjs  implement-checkpoint.mjs  implement-healing.mjs  mcp-report.mjs  no-bypass-guard.mjs  on-session-end.mjs  pipeline-phase-guard.mjs  post-implement-validate.mjs  pre-commit-lint.mjs  quality-first-guard.mjs  read-tracker.mjs  spec-guard.mjs  stripe-safety-guard.mjs  test-hooks.mjs  uc-lifecycle-guard.mjs
.claude/hooks/lib/: config.mjs  http.mjs  output.mjs  utils.mjs
.quality/: pending_heartbeats.jsonl
.quality/baselines/: invisible_pm.json
doc/masterclass/: PotenzIA_Plantilla (3).pptx  guion-masterclass-mcp.md  masterclass-mcp-va360  -  Reparado.pptx  masterclass-mcp-va360.pptx  prework-masterclass-mcp.md
doc/masterclass/fireflies-mcp/: README.md  index.js  package.json
doc/tracking/: README.md  config.json  index.json  items.json  labels.json
docs/: index.html
fireflies-mcp/: README.md  index.js  package-lock.json  package.json  pyproject.toml  server.py
invisible-pm-mcp/: README.md  autorizar_google.py  pyproject.toml  server.py
